# gitlab-downloader

./: .coverage  .env.example  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  LICENSE  Makefile  README.MD  README.en.md  RU_README.MD  electron-builder.config.js  fetch_repositories.py  package.json  pyproject.toml  requirements.txt  webpack.config.js
.github/workflows/: ci.yml
cli/: README.md  index.js  jest.config.js  package.json  ui.js
cli/__tests__/: index.test.js  ui.test.js
docs/plans/: 2026-02-21-documentation-update.md  2026-02-21-project-revision.md  2026-02-21-user-interface-and-migration.md  2026-02-23-fix-compilation-and-runtime-issues.md  (+2 more)
electron/: README.md  electron-builder.config.js  env.js  jest.config.js  main.js  package-lock.json  package.json  preload.js  webpack.config.js
gitlab_downloader/: __main__.py  api.py  api_routes.py  api_schemas.py  app.py  auth.py  author_mapper.py  cli_ui.py  client.py  cloner.py  config.py  constants.py  logging_config.py  migration.py  models.py  reporting.py  utils.py
lib/: README.md  auth.js  author-mapper.js  client.js  cloner.js  config.js  constants.js  eslint.config.js  index.js  migration.js  package.json  reporting.js  utils.js
tests/: conftest.py  test_api.py  test_app.py  test_auth.py  test_bundling.py  test_cli_ui.py  test_client.py  test_cloner_and_cli.py  test_config_files.py  test_electron_components.py  test_electron_main.py  test_fetch_repositories.py  test_integration_backend_frontend.py  test_logging_config.py  test_migration.py  test_pyinstaller_build.py  test_reporting.py
(+49 files in other folders)
