[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gitlab-downloader"
version = "0.1.0"
description = "Async GitLab group repository downloader"
requires-python = ">=3.10"
dependencies = [
  "aiohttp>=3.9,<4",
  "python-dotenv==1.0.0",
]

[project.scripts]
gitlab-dump = "gitlab_downloader.app:run"

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
  "pytest-asyncio>=0.23.0",
  "aioresponses>=0.7.6",
  "ruff>=0.8.0",
  "mypy>=1.11.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.10"
strict = false
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
packages = ["gitlab_downloader"]

[tool.setuptools]
py-modules = ["fetch_repositories"]

[tool.setuptools.packages.find]
include = ["gitlab_downloader*"]
